add role in form tag

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <h1>Meet the owner</h1>
           <ul itemscope itemtype="https://schema.org/Person">
             <li itemprop="name">Name: John Doe</li>
-            <li itemprop="job">Title: CEO</li>
+            <li itemprop="jobTitle">Title: CEO</li>
             <li itemprop="email">Email: johnjoe@jambox.ca</li>
-            <li itemprop="phone">Phone: 613-000-0000
+            <li itemprop="telephone">Phone: 613-000-0000
                <h1>Address</h1>
                <li itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                 <span itemprop="name">Jambox Studios</span> 
@@ -58,7 +58,7 @@
   
       <div class="contact-section">
         <h1>Contact Us</h1>
-        <form action="thanks.html">
+        <form action="thanks.html" role="form">
           <label>Full Name</label>
           <input type="text" placeholder="Full Name">
           <input type="text" placeholder="Email">
