--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <header role="header">
+    <header role="banner">
       <ul class="skip-links">
         <li><a href="#main-nav">Skip to main nav</a></li>
         <li><a href="#main-content">Skip to main content</a></li>
@@ -29,10 +29,9 @@
             <li><a href="#">Studio</a></li>
           </ul>
         </div>
-        <img src="https://placekitten.com/1200/900" class="banner">
+        <img src="https://placekitten.com/1200/900" alt="this image is cat's image">
       </div>
   </header>
-   <main role="main">
       <div id="main-content">
         <h1 id="w-h1">Welcome to Jam Box</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
@@ -58,7 +57,7 @@
   
       <div class="contact-section">
         <h1>Contact Us</h1>
-        <form action="thanks.html" role="form">
+        <form action="thanks.html">
           <label>Full Name</label>
           <input type="text" placeholder="Full Name">
           <input type="text" placeholder="Email">
@@ -69,9 +68,9 @@
         </form>
       </div>
      </div>
-    </main>
+    
     <div class="site-footer">
-      <footer role="contentinfo">&copy; 2021 Jam Box Studios</footer>
+      <footer>&copy; 2021 Jam Box Studios</footer>
     </div>
   </div>
 </body>
