--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&family=Stick+No+Bills:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -60,10 +60,12 @@
         <form action="thanks.html">
           <label>Full Name</label>
           <input type="text" placeholder="Full Name">
+          <label>Email</label>
           <input type="text" placeholder="Email">
+          <label>Subject</label>
           <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
+          <label>Your Message</label>
+          <textarea placeholder="your message"></textarea>
           <button type="submit">Send</button>
         </form>
       </div>
