--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img src="https://placekitten.com/1200/900" alt="this image is cat's image">
       </div>
   </header>
+  <main role="main">
       <div id="main-content">
         <h1 id="w-h1">Welcome to Jam Box</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
@@ -57,7 +58,7 @@
   
       <div class="contact-section">
         <h1>Contact Us</h1>
-        <form action="thanks.html">
+        <form action="thanks.html" role="form">
           <label>Full Name</label>
           <input type="text" placeholder="Full Name">
           <label>Email</label>
@@ -70,7 +71,7 @@
         </form>
       </div>
      </div>
-    
+    </main>
     <div class="site-footer">
       <footer>&copy; 2021 Jam Box Studios</footer>
     </div>
