--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
       <div class="contact-section">
         <h1>Contact Us</h1>
         <form action="thanks.html" role="form">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <label>Email</label>
-          <input type="text" placeholder="Email">
-          <label>Subject</label>
-          <input type="text" placeholder="Subject">
+          <label for="name">Full Name</label>
+          <input type="text" name="Full Name" placeholder="Full Name">
+          <label for="Email">Email</label>
+          <input type="text" name="Email"placeholder="Email">
+          <label for="subject">Subject</label>
+          <input type="text" name="Subject" placeholder="Subject">
           <label>Your Message</label>
           <textarea placeholder="your message"></textarea>
           <button type="submit">Send</button>
