--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#">Studio</a></li>
           </ul>
         </div>
-        <img src="https://placekitten.com/1200/900" alt="this image is cat's image">
+        <img src="https://placekitten.com/1200/900" alt="this image is shows cat's image">
       </div>
   </header>
   <main role="main">
